--- a/bfinance.ipynb
+++ b/bfinance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e1eacae5-edae-46ed-afd8-f5595a0a8f3a",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-11-01 18:00:00    29.6401\n",
-      "2020-11-02 18:00:00    28.8364\n",
-      "2020-11-03 18:00:00    28.8967\n",
-      "2020-11-04 18:00:00    29.3544\n",
-      "2020-11-05 18:00:00    31.6801\n",
-      "                        ...   \n",
-      "2021-10-27 19:00:00    58.1400\n",
-      "2021-10-28 19:00:00    60.2000\n",
-      "2021-10-29 19:00:00    61.4800\n",
-      "2021-10-30 19:00:00    64.4000\n",
-      "2021-10-31 19:00:00    63.8800\n",
-      "Name: FILUSDT, Length: 365, dtype: float64\n",
-      "BTCUSDT\n",
-      "ETHUSDT\n",
-      "FILUSDT\n",
-      "LINKUSDT\n",
-      "UNIUSDT\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
+      "SNXUSDT\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_binance_coin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14324/245473912.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0massets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0massets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0massets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SNXUSDT'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'ETHUSDT'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'FILUSDT'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'KSMUSDT'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'UNIUSDT'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2020\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2021\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14324/245473912.py\u001b[0m in \u001b[0;36mdownload\u001b[1;34m(tickers, start, end)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mticker\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtickers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mcoin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_binance_coin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         \u001b[0massets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0massets\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoin\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0massets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0massets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_binance_coin' is not defined"
      ]
     }
    ],
@@ -44,11 +37,11 @@
     "class bfinance:\n",
     "    def get_binance_coin(symbol, startTime, endTime): \n",
     "        url = \"https://api.binance.com/api/v3/klines\"\n",
-    "    \n",
+    "\n",
     "        startTime = str(int(startTime.timestamp() * 1000))\n",
     "        endTime = str(int(endTime.timestamp() * 1000))\n",
     "        limit = '1000'\n",
-    "    \n",
+    "\n",
     "        req_params = {\"symbol\" : symbol, 'interval' : '1d', 'startTime' : startTime, 'endTime' : endTime, 'limit' : limit}\n",
     "\n",
     "        #get raw json data & frame it\n",
@@ -58,21 +51,21 @@
     "        #format columns name\n",
     "        data.columns = ['datetime', 'open', 'high', 'low', 'close', 'volume','close_time', 'qav', 'num_trades','taker_base_vol', 'taker_quote_vol', 'ignore']\n",
     "        data.index = [dt.datetime.fromtimestamp(x/1000.0) for x in data.datetime]\n",
-    "        data=data.astype(float)\n",
+    "        data.set_index(pd.DatetimeIndex(data['datetime']))\n",
+    "        data = data.astype(float)\n",
     "        data = data.rename(columns={'close': symbol})\n",
     "        data = data[symbol]\n",
     "        return data\n",
-    "\n",
-    "    print (get_binance_coin('FILUSDT', dt.datetime(2020, 11, 1), dt.datetime(2021, 11, 1)))\n",
-    "\n",
-    "    def download(tickers, start ,end):\n",
-    "        assets = pd.DataFrame()\n",
-    "        for ticker in tickers:\n",
-    "            print (ticker)\n",
-    "            coin = bfinance.get_binance_coin(ticker, start, end)\n",
-    "            assets = pd.concat([assets, coin], axis=1) \n",
-    "        return assets\n",
-    "    print (download(['BTCUSDT','ETHUSDT','FILUSDT','LINKUSDT','UNIUSDT'], dt.datetime(2020, 11, 1), dt.datetime(2021, 11, 1) ))\n"
+    "def download(tickers, start ,end):\n",
+    "    assets = pd.DataFrame()\n",
+    "    for ticker in tickers:\n",
+    "        print (ticker)\n",
+    "        coin = bfinance.get_binance_coin(ticker, start, end)\n",
+    "        assets = pd.concat([assets, coin], axis=1) \n",
+    "    assets.index = pd.to_datetime(assets.index)\n",
+    "    return assets\n",
+    "data = download(['SNXUSDT','ETHUSDT','FILUSDT','KSMUSDT','UNIUSDT'], dt.datetime(2020, 12, 1), dt.datetime(2021, 11, 1) )\n",
+    "data"
    ]
   },
   {
